WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48427
Wrong instruction form for BKPT
https://bugs.webkit.org/show_bug.cgi?id=48427
Summary
Wrong instruction form for BKPT
Zoltan Herczeg
Reported
2010-10-27 06:47:42 PDT
One 0 is missing.
Attachments
patch
(1.78 KB, patch)
2010-10-27 06:52 PDT
,
Zoltan Herczeg
kling
: review+
kling
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zoltan Herczeg
Comment 1
2010-10-27 06:52:41 PDT
Created
attachment 72029
[details]
patch
WebKit Review Bot
Comment 2
2010-10-27 06:56:04 PDT
Attachment 72029
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 JavaScriptCore/assembler/ARMAssembler.h:209: One space before end of line comments [whitespace/comments] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3
2010-10-27 07:03:36 PDT
Comment on
attachment 72029
[details]
patch r=me
Andreas Kling
Comment 4
2010-10-27 07:04:22 PDT
Comment on
attachment 72029
[details]
patch Oh, please fix the style error before landing :)
Zoltan Herczeg
Comment 5
2010-10-28 00:23:51 PDT
Thanks for the review. Landed in
http://trac.webkit.org/changeset/70752
. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug